--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "oauthlib>=3.2.2",
     "twilio>=9.4.1",
     "pillow>=11.0.0",
+    "flask-socketio>=5.5.0",
+    "simple-websocket>=1.1.0",
 ]
